--- a/task3.html
+++ b/task3.html
@@ -32,14 +32,14 @@
 
     		<div class="box1" style="color:white;">
 
-				<div class="box1_l" style="text-align: center;width:100px;float: left;">
-				<img  class="img" src="images/task3_ld.png" style="width: 50%;"></br>
-				b4587854
+				<div class="box1_l" style="text-align: left; width:100px;">
+				<img  class="img" src="images/task3_ld.png" style="width: 50%;padding-left: 7px;">
+				<p align="left">b4587854</p>
  				</div>
     	
-				<div class="box1_r" style="text-align: center;width:100px;float:right;">
-				<img  class="img" src="images/task3_rd.png" style="width: 50%;"> </br>
-				puluteng
+				<div class="box1_r" style="text-align: right;width:100px;">
+				<img  class="img" src="images/task3_rd.png" style="width: 50%;padding-right: 7px;"> <p align="right" >
+				puluteng</p>
 				</div>
  			</div>
 
